[gd_scene format=3 uid="uid://bahfys0ax0vya"]

[ext_resource type="Script" uid="uid://dy6c8exqww28j" path="res://autoloads/pause_menu/pause_menu.gd" id="1_5ndmu"]

[node name="PauseMenu" type="CanvasLayer" unique_id=1803427360]
process_mode = 3
script = ExtResource("1_5ndmu")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=783399809]
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ExitButton" type="Button" parent="PanelContainer" unique_id=212428168]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=159874025]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 75

[node name="VolumeSliders" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=870077432]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VolumeSliders" unique_id=1234606874]
layout_mode = 2
mouse_filter = 2

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer2" unique_id=1961288841]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer2" unique_id=970958965]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="MasterPercent" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer2" unique_id=571474984]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "50"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VolumeSliders" unique_id=841320303]
layout_mode = 2
mouse_filter = 2

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer3" unique_id=419155919]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer3" unique_id=907465607]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="MusicPercent" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer3" unique_id=681322836]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "50"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VolumeSliders" unique_id=1903671238]
layout_mode = 2
mouse_filter = 2

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer" unique_id=2069371535]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer" unique_id=1167103085]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="SFXPercent" type="Label" parent="PanelContainer/MarginContainer/VolumeSliders/HBoxContainer" unique_id=579936007]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "50"

[node name="PauseLabel" type="Label" parent="PanelContainer/MarginContainer" unique_id=1671809711]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "PAUSED"
